--- a/web/web.csproj
+++ b/web/web.csproj
@@ -13,5 +13,6 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.10" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.10" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+    <PackageReference Include="WebEssentials.AspNetCore.PWA" Version="1.0.65" />
   </ItemGroup>
 </Project>
