--- a/web/wwwroot/manifest.json
+++ b/web/wwwroot/manifest.json
@@ -13,7 +13,7 @@
         "type": "image/png"
       }
     ],
-    "start_url": "./index.html",
+    "start_url": "https://sloveniatrips.azurewebsites.net",
     "display": "standalone",
     "theme_color": "#ffffff",
     "background_color": "#ffffff"
